# parser_test

./: README.md  pom.xml
src/main/java/org/apache/ctakes/core/cc/pretty/plaintext/: PrettyCSVWriter.java  PrettyRTWriter.java
src/main/java/org/apache/ctakes/examples/cc/: PrettyCSVWriter.java  PrettyRTWriter.java  RTProcedureTextWriter.java  RTTableFileWriter.java
src/main/java/org/apache/ctakes/rt_parser/ae/: ParagraphSentencer.java  RTPipper.java
src/main/java/org/apache/ctakes/rt_parser/cc/pretty/csv/: PrettyCSVWriter.java
src/main/java/org/apache/ctakes/rt_parser/cc/pretty/text/: PrettyRTWriter.java
src/user/resources/org/apache/ctakes/rt_parser/pipeline/: RT.piper  RTAnnotator.piper  RTStarter.piper  RTStopper.piper  RTThirdStep.piper
src/user/resources/org/apache/ctakes/rt_parser/rt_parser_py/: pyproject.toml  setup.cfg  setup.py
src/user/resources/org/apache/ctakes/rt_parser/rt_parser_py/src/rt_parser/: rt_annotator.py  rt_annotator_pipeline.py
src/user/resources/org/apache/ctakes/rt_parser/rt_parser_py/src/rt_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
