[metadata]
name = rt_parser
version = 5.0.0
author = BCH Health NLP Lab
author_email = eli.goldner@childrens.harvard.edu
description = RT Parser for DeepPhe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/apache/ctakes
project_urls =
    Bug Tracker = https://github.com/apache/ctakes/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
package_dir=
    = src
packages = find:
python_requires = >=3.7, <3.9
install_requires =
    torch
    torchvision
    torchaudio
    tomli>=2.0
    transitions
    python_version < 3.11
    ctakes-pbj~=5.0.0
    cnlp_transformers @ git+https://github.com/Machine-Learning-for-Medical-Language/radiotherapy_end2end.git

[options.packages.find]
where = src
